--- a/ai-detector.html
+++ b/ai-detector.html
@@ -10,7 +10,10 @@
 
 <body>
   <h1 style="text-align: center; font-style:oblique;">A.I Sign-Text Translator</h1>
+  
   <p style="text-align: center; font-style: initial;">This is an A.I Sign-Text Translator. The camera may take about a minute to load. Place your hand at around just 10cm from the camera.</p>
+  <p style="text-align: center; font-style: initial;" >Check how to use it <a href="https://www.youtube.com/watch?v=Nddx-FTskgs">here</a></p>
+ 
   <script src="sketch.js"></script>
 
 
